<resources>
    <string name="app_name">WeatherApp</string>

    <string name="destination_button">Add Destination</string>

    <string name="action_settings">Settings</string>
    <string name="max_temp">50</string>
    <string name="min_temp">0</string>
    <string name="current_temp">10</string>
    <string name="degree">°C</string>
    <string name="desc_icyroad">Icy road warning sign</string>
    <string name="desc_windy">Windy warning sign</string>
    <string name="desc_flood">Flood warning sign</string>
    <string name="desc_visibility">Visibility warning sign</string>
    <string name="desc_wet">Wet road warning sign</string>
    <string name="desc_sunset">Sunset time warning sign</string>
    <string name="desc_condition">Condition image</string>
    <string name="desc_nextlocation">Next location</string>
    <string name="dexc_previouslocation">Previous location</string>


</resources>
